:memo: Set register and login routes in docs
Configurando as rotas de login e registro na documentação
