# backend/src/routes/user.route.js
@@ -4,7 +4,7 @@ const router = express.Router();
 const controller = require('../controllers/user.controller.');
 const validateBody = require('../middlewares/validateRegisterBody.middleware');
 
+router.post('/login', validateBody, controller.login);
 router.post('/register', validateBody, controller.create);
-router.get('/', validateBody, controller.login);
 
 module.exports = router;
